# oceans-of-nyc

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  MODAL_SETUP.md  QUICK_START.md  README.md  bluesky_client.py  database.py  exif_utils.py  main.py  modal_app.py  modal_test.py  plan.md  pyproject.toml  setup_modal.sh
.beads/: deletions.jsonl  issues.jsonl
analytics/: leaderboards.R
chat/: README.md  __init__.py  messages.py  session.py  webhook.py
database/: README.md  __init__.py  models.py
geolocate/: README.md  __init__.py  exif.py  geocoding.py  maps.py
post/: README.md  __init__.py  bluesky.py
process/: __init__.py
scripts/: backfill_image_hashes.py
utils/: __init__.py  image_hashing.py
validate/: README.md  __init__.py  matcher.py  tlc.py
